Start using virtual threads